Fix text alignment for the quote sextion

--- a/style.css
+++ b/style.css
@@ -140,21 +140,15 @@ button {
 .quote {
     background-color: #E5E7EB;
     padding: 48px 150px;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* flex-basis: 500px; */
 }
 
-.quote .statement {
+.quote .text {
     font-style: italic;
 }
 
 .quote .author {
     font-weight: 700;
-    display: flex;
-    justify-content: flex-end;
+    text-align: right;
 }
 
 /* the call to action style starts hare */
